# mur-web

./: .gitignore  Makefile  README.md  setup.cfg
mur/: __init__.py  config.py  emails.py  utils.py
mur/templates/: cgu.html  form.html  home.html  index.html
