[metadata]
name = mur
version = 0.0.1

[options]
packages = find:
include_package_data = True
install_requires =
    Jinja2==2.11.1
    PyJWT==1.7.1
    roll==0.11.0
    ujson==2.0.3

[options.extras_require]
dev =
    hupper==1.10.2
    minicli==0.4.4
test =
    pytest==5.4.1
    pytest-asyncio==0.10.0
prod =
    gunicorn==19.9.0
    uvloop==0.12.2


[options.entry_points]
console_scripts =
    mur = mur:main
